# vault-bridge

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yml  release.yml
agent-workspace/plans/: 2026-03-12-vault-bridge-architecture-plan.md
infra/: setup-github-oidc.sh
infra/shared/: azuredeploy.json  azuredeploy.parameters.json
infra/vault-bridge/: azuredeploy.json  azuredeploy.parameters.json
vault_bridge/: __init__.py  tools.py
